<resources>
    <string name="app_name">learnJapanWords</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="japan">Введите слово на японском</string>
    <string name="russian">Введите слово на русском</string>
    <string name="dismiss">Отмена</string>
    <string name="add">Добавить</string>
    <string name="document">Добавить через документ</string>
    <string name="display">Слово</string>
    <string name="flip">Показать перевод</string>
</resources>